# Lox

./: .gitignore  CMakeLists.txt  README.md
src/: Lox.java  Scanner.java  TokenType.java
src/clox/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/com/craftinginterpreters/lox/: AstPrinter.java  Environment.java  Interpreter.java  Lox.java  LoxFunction.java  Parser.java  Resolver.java  Scanner.java  TokenType.java
src/com/craftinginterpreters/tool/: GenerateAst.java
src/tests/: branching.lox  fib.lox  functions.lox  local_funcs.lox  loops.lox  scoping_variables.lox
